--- a/r-rmarkdown.Rmd
+++ b/r-rmarkdown.Rmd
@@ -22,10 +22,10 @@ This lesson assumes a [basic familiarity with R](r-basics.html), [data frames](r
 Prior to class, spend a few minutes to learn a little bit about _Markdown_. All you really need to know is that Markdown is a lightweight markup language that lets you create styled text (like **bold**, _italics_, [links](http://bioconnector.org/markdown), etc.) using a very lightweight plain-text syntax: `(like **bold**, _italics_, [links](http://bioconnector.org/markdown), etc.)`. The resulting text file can be _rendered_ into many downstream formats, like PDF (for printing) or HTML (websites).
 
 1. _(30 seconds)_ Read the summary paragraph on the [Wikipedia page](https://en.wikipedia.org/wiki/Markdown). 
-1. _(5-10 minutes)_ Run through this in-browser markdown tutorial: <http://markdowntutorial.com/>.
+1. _(1 minute)_ Bookmark and refer to this markdown reference: <http://commonmark.org/help/>.
+1. _(5-10 minutes)_ Run through this 10-minute in-browser markdown tutorial: <http://commonmark.org/help/tutorial/>.
 1. _(5-10 minutes)_ Go to <http://dillinger.io/>, an in-browser Markdown editor, and play around. Write a simple markdown document, and export it to HTML and/or PDF.
 1. _(10 minutes)_ See RStudio's excellent documentation on Rmarkdown at <http://rmarkdown.rstudio.com/>. Click "Getting Started" and watch the 1 minute video on the [Introduction page](http://rmarkdown.rstudio.com/lesson-1.html). Continue reading through each section here on the navigation bar to the left (_Introduction_ through _Cheatsheets_, and optionally download and print out the cheat sheet). Finally, browse through the [RMarkdown Gallery](http://rmarkdown.rstudio.com/gallery.html). 
-<!-- 1. _(5-10 minutes)_ Take a look at the Markdown/Rmarkdown reference for this course: <http://bioconnector.org/markdown>. Scroll through the Markdown reference, which you've already seen by this point, then click the RMarkdown link at the top and skim through this.  -->
 1. _(0 seconds)_ No need to look now, but don't forget that the course [help page](help.html) has some [useful resources on Markdown+RMarkdown](help.html#markdown-rmarkdown-resources).
 
 ## Who cares about reproducible research?
@@ -156,7 +156,7 @@ Visit **[bioconnector.org/markdown](http://bioconnector.org/markdown/#!rmarkdown
 
 First, open RStudio. Create a new project. Quit RStudio, then launch RStudio using the project file (.Rproj) you just created.
 
-Next, download the gapminder data from [bioconnector.org/data](http://bioconnector.org/data/gapminder.csv). Put this file in your R project directory. Maybe put it in a subdirectory called "data." Importantly, now your code and data will live in the same place.
+Next, download the **gapminder.csv** data from the [data download page](data/gapminder.csv). Put this file in your R project directory. Maybe put it in a subdirectory called "data." Importantly, now your code and data will live in the same place.
 
 Let's create a bare-bones RMarkdown document that compiles to HTML. In RStudio, select **File**, **New File**, **R Markdown...**. Don't worry about the title and author fields. When the new document launches, select everything then delete it. Let's author an RMarkdown file from scratch. Save it as `fromscratch.Rmd`. 
 
@@ -167,7 +167,7 @@ catn("This is my first RMarkdown document!")
 catn()
 catn("# Let's embed some R code")
 catn()
-catn("Let's load the **Gapminder** data from <http://bioconnector.org>:")
+catn("Let's load the **Gapminder** data we just downloaded:")
 catn()
 catn("```{r}")
 catn("library(dplyr)")
@@ -208,7 +208,7 @@ Now, open up that regular markdown file and take a look.
     
     # Let's embed some R code
     
-    Let's load the **Gapminder** data from <http://bioconnector.org>:
+    Let's load the **Gapminder** data:
     
     
     ```r
