--- a/data.Rmd
+++ b/data.Rmd
@@ -15,6 +15,7 @@ suppressPackageStartupMessages(library(dplyr))
 if (!file.exists("data.zip")) system("zip -r data.zip data -x '*.html'")
 ```
 
+<big><mark>**_PLEASE NOTE THAT THE DATA SETS YOU MAY NEED ARE INCOMPLETE AS OF JUNE 1 2017. THEY WILL BE UPDATED PRIOR TO THE COURSE, AND YOU WILL BE NOTIFIED. PLEASE DON'T WORRY ABOUT COMPLETING THIS JUST YET._**</mark></big>
 
 1. **Option 1: Download all the data**. Download and extract **[this zip file <i class="fa fa-file-archive-o" aria-hidden="true"></i>](data.zip)** `r paste0("(", round(file.info("data.zip")$size/1e6, 2), " Mb)")` with all the data for the entire workshop. This may include additional datasets that we won't use here.
 1. **Option 2: Download individual datasets as needed.** 
