--- a/r-ggtree.Rmd
+++ b/r-ggtree.Rmd
@@ -379,21 +379,72 @@ msaplot(p=ggtree(tree), fasta="data/flu_aasequence.fasta", window=c(150, 175))
 Take a look at the [advanced tree annotation vignette](http://bioconductor.org/packages/release/bioc/vignettes/ggtree/inst/doc/advanceTreeAnnotation.html) for much, much more!
 
 
+## Bonus!
+
+See the [ggtree vignettes](http://bioconductor.org/packages/release/bioc/html/ggtree.html) for more details on how these work.
+
+### Many trees
+
+ggtree will let you plot many trees at once, and you can facet them the normal ggplot2 way. Let's generate 3 replicates each of 4 random trees with 10, 25, 50, and 100 tips, plotting them all.
+
+```{r faceted, fig.width=10, fig.height=8}
+set.seed(42)
+trees <- lapply(rep(c(10, 25, 50, 100), 3), rtree)
+class(trees) <- "multiPhylo"
+ggtree(trees) + facet_wrap(~.id, scale="free", ncol=4) + ggtitle("Many trees. Such phylogenetics. Wow.")
+```
+
+### Plot tree with other data
+
+For showing a phylogenetic tree alongside other panels with your own data, the `facet_plot()` function accepts a input data.frame and a `geom` function to draw the input data. 
+
+
+```{r assocdata, fig.width=8}
+# Generate a random tree with 30 tips
+tree <- rtree(30)
+
+# Make the original plot
+p <- ggtree(tree)
+
+# generate some random values for each tip label in the data
+d1 <- data.frame(id=tree$tip.label, val=rnorm(30, sd=3))
+
+# Make a second plot with the original, naming the new plot "dot", 
+# using the data you just created, with a point geom.
+p2 <- facet_plot(p, panel="dot", data=d1, geom=geom_point, aes(x=val), color='red3')
+
+# Make some more data with another random value.
+d2 <- data.frame(id=tree$tip.label, value = abs(rnorm(30, mean=100, sd=50)))
+
+# Now add to that second plot, this time using the new d2 data above, 
+# This time showing a bar segment, size 3, colored blue.
+p3 <- facet_plot(p2, panel='bar', data=d2, geom=geom_segment, 
+           aes(x=0, xend=value, y=y, yend=y), size=3, color='blue4') 
+
+# Show all three plots with a scale
+p3 + theme_tree2()
+```
+
+### Overlay organism silouhettes
+
+[phylopic.org](http://phylopic.org/) hosts free silhouette images of animals, plants, and other life forms, all under Creative Commons or Public Domain. You can use ggtree to overlay a phylopic image on your plot at a node of your choosing. Let's show some gram-negative bacteria over the whole plot, and put a _Homo sapiens_ and a dog on those clades we're working with.
+
+```{r phylopic, fig.width=10, fig.height=8}
+read.tree("data/tree_newick.nwk") %>% 
+  ggtree() %>% 
+  phylopic("ba0a446e-18d7-4db9-9937-5adec24721b5", 
+           color="gold2", alpha = .25) %>% 
+  phylopic("c089caae-43ef-4e4e-bf26-973dd4cb65c5", 
+           color="purple3", alpha = .5, node=17) %>% 
+  phylopic("6c9cb19d-1d8a-4215-88ba-d49cd4917a5e", 
+           color="purple3", alpha = .5, node=21)
+```
+
+
+
 ```{r, include=FALSE}
 #######################################################################
 knitr::knit_exit() ####################################################
 #######################################################################
 ```
-
-
-
-```{r eval=F, include=F}
-library(tidyverse)
-set.seed(42)
-rep(c(10, 20, 80), 3) %>% 
-  map(rtree) %>% 
-  `class<-`("multiPhylo") %>% 
-  ggtree() + facet_wrap(~.id, scale="free")
-```
-
 
