--- a/index.Rmd
+++ b/index.Rmd
@@ -5,7 +5,7 @@ output:
     toc: yes
 ---
 
-This Metabarcoding workshop introduces methods, tools, and software for reproducibly managing, manipulating, analyzing, and visualizing large-scale biomedical data using the R statistical computing environment.
+This Metabarcoding workshop will introduces methods, tools, and software for reproducibly managing, manipulating, analyzing, and visualizing targeted sequencing data using the R statistical and unix computing environment.
 
 ## General Information
 
@@ -25,20 +25,20 @@ Thursday, Dec 3 | 8:30am - 12:00pm
 <!-- <small>If you are driving please allow an extra 30 minutes to find parking and walk to the HSL building. The HSL's street address is [1350 Jefferson Park Avenue](https://goo.gl/maps/iZqX6RhDuJ22). The closest parking garage is the [11th Street Parking Garage](http://www.virginia.edu/parking/facilities/11thstreet.html). You'll need to grab a parking ticket when you drive in, take the ticket with you, and then pay at the customer service or "Pay-On-Foot Station" before exiting the garage. Alternatively, there may be street parking or other garage parking options available nearby off [West Main St](https://goo.gl/maps/2ew6MhXGAmA2). Once at the entrance to the HSL, [call Stephen](https://med.virginia.edu/phs/faculty-and-staff-directory/stephen-d-turner-ph-d/) to let you in. The Carter classroom is in the HSL, downstairs one floor, to the right, across from my office.</small> -->
 
 **_Instructor_: Dita Cahyani, Aji W. Anggoro, Danang Ambar Prabowo, Rian Prasetya**&nbsp;
-<a href="http://www.google.com/recaptcha/mailhide/d?k=01Wp6BFjxhU6BE1ONDOeDAZg==&amp;c=hClvy-RObaqm8ONK69PMtLKUh74mVHLjokUJXLgkUHk=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501Wp6BFjxhU6BE1ONDOeDAZg\75\75\46c\75hClvy-RObaqm8ONK69PMtLKUh74mVHLjokUJXLgkUHk\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="fa fa-envelope"></i></a>
-<a href="https://med.virginia.edu/phs/faculty-and-staff-directory/stephen-d-turner-ph-d/" target="_blank"><i class="fa fa-phone"></i></a>
-<a href="https://twitter.com/genetics_blog" target="_blank"><i class="fa fa-twitter"></i></a>
-<a href="https://github.com/stephenturner/" target="_blank"><i class="fa fa-github"></i></a>
-<a href="http://www.gettinggeneticsdone.com/" target="_blank"><i class="fa fa-rss"></i></a>  
+<!-- <a href="http://www.google.com/recaptcha/mailhide/d?k=01Wp6BFjxhU6BE1ONDOeDAZg==&amp;c=hClvy-RObaqm8ONK69PMtLKUh74mVHLjokUJXLgkUHk=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501Wp6BFjxhU6BE1ONDOeDAZg\75\75\46c\75hClvy-RObaqm8ONK69PMtLKUh74mVHLjokUJXLgkUHk\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="fa fa-envelope"></i></a> -->
+<!-- <a href="https://med.virginia.edu/phs/faculty-and-staff-directory/stephen-d-turner-ph-d/" target="_blank"><i class="fa fa-phone"></i></a> -->
+<!-- <a href="https://twitter.com/genetics_blog" target="_blank"><i class="fa fa-twitter"></i></a> -->
+<!-- <a href="https://github.com/stephenturner/" target="_blank"><i class="fa fa-github"></i></a> -->
+<!-- <a href="http://www.gettinggeneticsdone.com/" target="_blank"><i class="fa fa-rss"></i></a>   -->
 <small>All instructors are PhD Candidate and Postdoctoral Researcher in UCLA, National University of Singapore and KAUST.</small>
 
 ### About this workshop 
 
-This workshop introduces methods, tools, and software for reproducibly managing, manipulating, analyzing, and visualizing large-scale biomedical data. Specifically, the course introduces the R statistical computing environment and packages for manipulating and visualizing high-dimensional data, covers strategies for reproducible research, and culminates with analyses of real experimental NGS data using R and Bioconductor packages.
+This workshop introduces methods, tools, and software for reproducibly managing, manipulating, analyzing, and visualizing large-scale metabarcoding data. Specifically, the course introduces the R statistical computing environment and packages for manipulating and visualizing high-dimensional data, covers strategies for reproducible research, and culminates with analyses of real experimental NGS data using R and Bioconductor packages.
 
-**This is not a statistics class.** Some general knowledge of statistics and study design is helpful, but isn't strictly required. If time allows, there is an optional session on statistics that we can cover.
+<!-- **This is not a statistics class.** Some general knowledge of statistics and study design is helpful, but isn't strictly required. If time allows, there is an optional session on statistics that we can cover. -->
 
-**This is not a _"Tool X"_ or _"Software Y"_ class.** I want you to take away from this workshop the ability to use an extremely powerful scientific computing environment (R) to do many of the things that you'll do _across study designs and disciplines_ -- managing, manipulating, visualizing, and analyzing large, sometimes high-dimensional data. Whether that data is gene expression data from yeast, microbial genomics data from _B. pertussis_, public health data from [Gapminder](http://www.gapminder.org/), RNA-seq data from humans, or truck routing data from FedEx, you'll need the same computational know-how and data literacy to do the same kinds of basic tasks in each. I might show you how to use specific tools here and there (DESeq2 for RNA-seq analysis, ggtree for drawing phylogenetic trees, etc.), but these are not important -- you probably won't be using the same specific software or methods 10 years from now, but you'll still use the same underlying data and computational foundation. **That** is the point of this workshop -- to arm you with a basic foundation, and more importantly, to **enable you to figure out how to use _this tool_ or _that tool_ on your own**, when you need to.
+<!-- **This is not a _"Tool X"_ or _"Software Y"_ class.** I want you to take away from this workshop the ability to use an extremely powerful scientific computing environment (R) to do many of the things that you'll do _across study designs and disciplines_ -- managing, manipulating, visualizing, and analyzing large, sometimes high-dimensional data. Whether that data is gene expression data from yeast, microbial genomics data from _B. pertussis_, public health data from [Gapminder](http://www.gapminder.org/), RNA-seq data from humans, or truck routing data from FedEx, you'll need the same computational know-how and data literacy to do the same kinds of basic tasks in each. I might show you how to use specific tools here and there (DESeq2 for RNA-seq analysis, ggtree for drawing phylogenetic trees, etc.), but these are not important -- you probably won't be using the same specific software or methods 10 years from now, but you'll still use the same underlying data and computational foundation. **That** is the point of this workshop -- to arm you with a basic foundation, and more importantly, to **enable you to figure out how to use _this tool_ or _that tool_ on your own**, when you need to. -->
 
 ## Setup
 
@@ -53,36 +53,36 @@ After installing and testing the software we'll be using, please download the da
 
 ### Core sessions
 
-#### Session 1: Intro to R
+#### Session 1: Intro to Metabracoding
 
 This novice-level introduction is directed toward life scientists with little to no experience with statistical computing or bioinformatics. This interactive introduction will introduce the R statistical computing environment. The first part of this workshop will demonstrate very basic functionality in R, including functions, functions, vectors, creating variables, getting help, filtering, data frames, plotting, and reading/writing files.
 
-#### Session 2: Advanced Data Manipulation with R
+#### Session 2: How do we want to use Metabarcoding
 
 Data analysis involves a large amount of janitor work -- munging and cleaning data to facilitate downstream data analysis. This session assumes a basic familiarity with R and covers tools and techniques for advanced data manipulation. It will cover data cleaning and "tidy data," and will introduce R packages that enable data manipulation, analysis, and visualization using split-apply-combine strategies. Upon completing this lesson, students will be able to use the _dplyr_ package in R to effectively manipulate and conditionally compute summary statistics over subsets of a "big" dataset containing many observations.
 
-#### Session 3: Reproducible Research & Dynamic Documents
+#### Session 3: Nitty Gritty with Metabarcoding Data Processing
 
 Contemporary life sciences research is plagued by reproducibility issues. This session covers some of the barriers to reproducible research and how to start to address some of those problems during the data management and analysis phases of the research life cycle. In this session we will cover using R and dynamic document generation with RMarkdown and RStudio to weave together reporting text with executable R code to automatically generate reports in the form of PDF, Word, or HTML documents.
 
-#### Session 4: Advanced Data Visualization with R and ggplot2
+<!-- #### Session 4: Advanced Data Visualization with R and ggplot2 -->
 
-This session will cover fundamental concepts for creating effective data visualization and will introduce tools and techniques for visualizing large, high-dimensional data using R. We will review fundamental concepts for visually displaying quantitative information, such as using series of small multiples, avoiding "chart-junk," and maximizing the data-ink ratio. After briefly covering data visualization using base R graphics, we will introduce the _ggplot2_ package for advanced high-dimensional visualization. We will cover the grammar of graphics (geoms, aesthetics, stats, and faceting), and using ggplot2 to create plots layer-by-layer. Upon completing this lesson, students will be able to use R to explore a high-dimensional dataset by faceting and scaling arbitrarily complex plots in small multiples.
+<!-- This session will cover fundamental concepts for creating effective data visualization and will introduce tools and techniques for visualizing large, high-dimensional data using R. We will review fundamental concepts for visually displaying quantitative information, such as using series of small multiples, avoiding "chart-junk," and maximizing the data-ink ratio. After briefly covering data visualization using base R graphics, we will introduce the _ggplot2_ package for advanced high-dimensional visualization. We will cover the grammar of graphics (geoms, aesthetics, stats, and faceting), and using ggplot2 to create plots layer-by-layer. Upon completing this lesson, students will be able to use R to explore a high-dimensional dataset by faceting and scaling arbitrarily complex plots in small multiples. -->
 
-#### Session 5: Visualizing and Annotating Phylogenetic Trees
+<!-- #### Session 5: Visualizing and Annotating Phylogenetic Trees -->
 
-This lesson demonstrates how to use R and ggtree, an extension of the ggplot2 package, to visualize and annotate phylogenetic trees. This lesson does _not_ cover methods and software for _generating_ phylogenetic trees, nor does it it cover _interpreting_ phylogenies. Genome-wide sequencing allows for examination of the entire genome, and from this, many methods and software tools exist for comparative genomics using SNP- and gene-based phylogenetic analysis, either from unassembled sequencing reads, draft assemblies/contigs, or complete genome sequences. These methods are beyond the scope of this lesson.
+<!-- This lesson demonstrates how to use R and ggtree, an extension of the ggplot2 package, to visualize and annotate phylogenetic trees. This lesson does _not_ cover methods and software for _generating_ phylogenetic trees, nor does it it cover _interpreting_ phylogenies. Genome-wide sequencing allows for examination of the entire genome, and from this, many methods and software tools exist for comparative genomics using SNP- and gene-based phylogenetic analysis, either from unassembled sequencing reads, draft assemblies/contigs, or complete genome sequences. These methods are beyond the scope of this lesson. -->
 
-#### Session 6: Introduction to RNA-seq Data Analysis
+<!-- #### Session 6: Introduction to RNA-seq Data Analysis -->
 
-This session focuses on analyzing real data from a biological application - analyzing RNA-seq data for differentially expressed genes. This session provides an introduction to RNA-seq data analysis, involving reading in count data from an RNA-seq experiment, exploring the data using base R functions and then analysis with the DESeq2 Bioconductor package. The session will conclude with downstream pathway analysis and exploring the biological and functional context of the results.
+<!-- This session focuses on analyzing real data from a biological application - analyzing RNA-seq data for differentially expressed genes. This session provides an introduction to RNA-seq data analysis, involving reading in count data from an RNA-seq experiment, exploring the data using base R functions and then analysis with the DESeq2 Bioconductor package. The session will conclude with downstream pathway analysis and exploring the biological and functional context of the results. -->
 
 
-### Optional sessions
+<!-- ### Optional sessions -->
 
-#### Elective 1: Essential Statistics
+<!-- #### Elective 1: Essential Statistics -->
 
-This session will provide hands-on instruction and exercises covering basic statistical analysis in R. This will cover descriptive statistics, t-tests, linear models, chi-square, clustering, dimensionality reduction, and resampling strategies. We will also cover methods for "tidying" model results for downstream visualization and summarization.
+<!-- This session will provide hands-on instruction and exercises covering basic statistical analysis in R. This will cover descriptive statistics, t-tests, linear models, chi-square, clustering, dimensionality reduction, and resampling strategies. We will also cover methods for "tidying" model results for downstream visualization and summarization. -->
 
 ## FAQ
 
