--- a/r-basics.Rmd
+++ b/r-basics.Rmd
@@ -1,5 +1,10 @@
 ---
 title: 'R: The Basics'
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
+  word_document: default
 ---
 
 ```{r, echo=FALSE, message=FALSE, eval=TRUE}
