--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Metabarcoding Data Processing Workshops Bionesiaa"
+title: "Metabarcoding Data Processing Workshops Bionesiaaa"
 output: 
   html_document:
     toc: yes
